# ComputerVision2015

./: .gitignore
Practico1/2/: CMakeLists.txt  GaussianBlur.cpp
Practico1/3/: CMakeLists.txt  DisplayImageCuda.cpp  kernel.cu  kernel.h
Practico2/: CMakeLists.txt  HarrisCorners  HarrisCorners.cpp
Practico3/: CMakeLists.txt  DisplayImage  DisplayImageCuda.cpp  Makefile  kernel.cu  kernel.h
Practico3/nobordes_trhust/: DisplayImageCuda.cpp  README  kernel.cu
Practico4/: CMakeLists.txt  Homography.cpp  img1.ppm  img2.ppm  img3.ppm
Practico4/FAST+FREAK/: Homography.cpp
Practico4/ORB/: Homography.cpp
Practico4/SIFT/: Homography.cpp
Practico4/SURF/: Homography.cpp
